--- a/index.html
+++ b/index.html
@@ -44,24 +44,53 @@
 			<div class='row collapse'>
 				<div class='art columns small-12 medium-4 active'>
 
-					<img src='/assets/img/album_01.jpg'>
-					<div class='overlay'></div>
-					<p>@artistname</p>
+					<div class='wrapper active'>
+						<img src='/assets/img/album_01.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<div class='wrapper'>
+						<img src='/assets/img/album_02.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
 					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 				<div class='art columns small-12 medium-4'>
 
-					<img src='/assets/img/album_02.jpg'>
-					<div class='overlay'></div>
-					<p>@artistname</p>
+					<div class='wrapper active'>
+						<img src='/assets/img/album_01.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<div class='wrapper'>
+						<img src='/assets/img/album_02.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 				<div class='art columns small-12 medium-4'>
 
-					<img src='/assets/img/album_03.jpg'>
-					<div class='overlay'></div>
-					<p>@artistname</p>
+					<div class='wrapper active'>
+						<img src='/assets/img/album_01.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<div class='wrapper'>
+						<img src='/assets/img/album_02.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 			</div>
@@ -69,25 +98,55 @@
 
 				<div class='art columns small-12 medium-4'>
 
-					<img src='/assets/img/album_04.jpg'>
-					<div class='overlay'></div>
-					<p>@artistname</p>
+					<div class='wrapper active'>
+						<img src='/assets/img/album_01.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<div class='wrapper'>
+						<img src='/assets/img/album_02.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 
 				<div class='art columns small-12 medium-4'>
 
-					<img src='/assets/img/album_05.jpg'>
-					<div class='overlay'></div>
-					<p>@artistname</p>
+					<div class='wrapper active'>
+						<img src='/assets/img/album_01.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<div class='wrapper'>
+						<img src='/assets/img/album_02.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 
 				<div class='art columns small-12 medium-4'>
 
-					<img src='/assets/img/album_06.jpg'>
-					<div class='overlay'></div>
-					<p>@artistname</p>
+					<div class='wrapper active'>
+						<img src='/assets/img/album_01.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<div class='wrapper'>
+						<img src='/assets/img/album_02.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 			</div>
@@ -95,25 +154,55 @@
 			<div class='row collapse'>
 				<div class='art columns small-12 medium-4'>
 
-					<img src='/assets/img/album_07.jpg'>
-					<div class='overlay'></div>
-					<p>@artistname</p>
+					<div class='wrapper active'>
+						<img src='/assets/img/album_01.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<div class='wrapper'>
+						<img src='/assets/img/album_02.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 
 				<div class='art columns small-12 medium-4'>
 
-					<img src='/assets/img/album_08.jpg'>
-					<div class='overlay'></div>
-					<p>@artistname</p>
+					<div class='wrapper active'>
+						<img src='/assets/img/album_01.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<div class='wrapper'>
+						<img src='/assets/img/album_02.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 
 				<div class='art columns small-12 medium-4'>
 
-					<img src='/assets/img/album_09.png'>
-					<div class='overlay'></div>
-					<p>@artistname</p>
+					<div class='wrapper active'>
+						<img src='/assets/img/album_01.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<div class='wrapper'>
+						<img src='/assets/img/album_02.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 
