Started object logic

--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
 		<section class='grid'>
 
 			<div class='row collapse'>
-				<div class='art columns small-12 medium-4 active'>
+				<div class='art columns small-12 medium-4 active' id="1">
 
-					<img src='/assets/img/album_01.jpg'>
+					<img src='/assets/img/Alert The Medic.jpg'>
 					<div class='overlay'></div>
 					<p>@artistname</p>
 					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
-				<div class='art columns small-12 medium-4'>
+				<div class='art columns small-12 medium-4' id="2">
 
-					<img src='/assets/img/album_02.jpg'>
+					<img src='/assets/img/Anne Janelle.jpg'>
 					<div class='overlay'></div>
 					<p>@artistname</p>
 
 				</div>
-				<div class='art columns small-12 medium-4'>
+				<div class='art columns small-12 medium-4' id="3">
 
-					<img src='/assets/img/album_03.jpg'>
+					<img src='/assets/img/Bloody Diamonds.jpg'>
 					<div class='overlay'></div>
 					<p>@artistname</p>
 
@@ -67,25 +67,25 @@
 			</div>
 			<div class='row collapse'>
 
-				<div class='art columns small-12 medium-4'>
+				<div class='art columns small-12 medium-4' id="4">
 
-					<img src='/assets/img/album_04.jpg'>
+					<img src='/assets/img/Cam Smith.jpg'>
 					<div class='overlay'></div>
 					<p>@artistname</p>
 
 				</div>
 
-				<div class='art columns small-12 medium-4'>
+				<div class='art columns small-12 medium-4' id="5">
 
-					<img src='/assets/img/album_05.jpg'>
+					<img src='/assets/img/Chris Martin.jpg'>
 					<div class='overlay'></div>
 					<p>@artistname</p>
 
 				</div>
 
-				<div class='art columns small-12 medium-4'>
+				<div class='art columns small-12 medium-4' id="6">
 
-					<img src='/assets/img/album_06.jpg'>
+					<img src='/assets/img/Dylan Guthro.jpg'>
 					<div class='overlay'></div>
 					<p>@artistname</p>
 
@@ -93,25 +93,25 @@
 			</div>
 
 			<div class='row collapse'>
-				<div class='art columns small-12 medium-4'>
+				<div class='art columns small-12 medium-4' id="7">
 
-					<img src='/assets/img/album_07.jpg'>
+					<img src='/assets/img/E.B. Anderson.jpg'>
 					<div class='overlay'></div>
 					<p>@artistname</p>
 
 				</div>
 
-				<div class='art columns small-12 medium-4'>
+				<div class='art columns small-12 medium-4' id="8">
 
-					<img src='/assets/img/album_08.jpg'>
+					<img src='/assets/img/Glory Glory.jpg'>
 					<div class='overlay'></div>
 					<p>@artistname</p>
 
 				</div>
 
-				<div class='art columns small-12 medium-4'>
+				<div class='art columns small-12 medium-4' id="9">
 
-					<img src='/assets/img/album_09.png'>
+					<img src='/assets/img/Heather Green.png'>
 					<div class='overlay'></div>
 					<p>@artistname</p>
 
