--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<title>Norex / Nocturne</title>
 
 		<!-- CSS Imports -->
-			<link rel="stylesheet" href="../../../../assets/css/app.css" media='all' />
-			<link rel="stylesheet" href="../../../../assets/css/font-awesome.css" media='all' />
-			<link rel="stylesheet" href="../../../../assets/css/print.css" media='print' />
+			<link rel="stylesheet" href="assets/css/app.css" media='all' />
+			<link rel="stylesheet" href="assets/css/font-awesome.css" media='all' />
+			<link rel="stylesheet" href="assets/css/print.css" media='print' />
 
 		<!-- Google Fonts -->
 			<link href='http://fonts.googleapis.com/css?family=Raleway:400,100,300,200' rel='stylesheet' type='text/css'>
@@ -39,10 +39,10 @@
 
 		</section>
 
-		<section class='grid'>
+		<section class='grdata-grid-id'>
 
 			<div class='row collapse'>
-				<div class='art columns small-12 medium-4 active' id="1">
+				<div class='art columns small-12 medium-4 active' data-grid-id="1">
 
 					<div class='wrapper active'>
 						<img src='/assets/img/album_01.jpg'>
@@ -59,7 +59,7 @@
 					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
-				<div class='art columns small-12 medium-4' id="2">
+				<div class='art columns small-12 medium-4' data-grid-id="2">
 
 					<div class='wrapper active'>
 						<img src='/assets/img/album_01.jpg'>
@@ -76,7 +76,7 @@
 					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
-				<div class='art columns small-12 medium-4' id="3">
+				<div class='art columns small-12 medium-4' data-grid-id="3">
 
 					<div class='wrapper active'>
 						<img src='/assets/img/album_01.jpg'>
@@ -96,7 +96,7 @@
 			</div>
 			<div class='row collapse'>
 
-				<div class='art columns small-12 medium-4' id="4">
+				<div class='art columns small-12 medium-4' data-grid-id="4">
 
 					<div class='wrapper active'>
 						<img src='/assets/img/album_01.jpg'>
@@ -114,7 +114,7 @@
 
 				</div>
 
-				<div class='art columns small-12 medium-4' id="5">
+				<div class='art columns small-12 medium-4' data-grid-id="5">
 
 					<div class='wrapper active'>
 						<img src='/assets/img/album_01.jpg'>
@@ -132,7 +132,7 @@
 
 				</div>
 
-				<div class='art columns small-12 medium-4' id="6">
+				<div class='art columns small-12 medium-4' data-grid-id="6">
 
 					<div class='wrapper active'>
 						<img src='/assets/img/album_01.jpg'>
@@ -152,7 +152,7 @@
 			</div>
 
 			<div class='row collapse'>
-				<div class='art columns small-12 medium-4' id="7">
+				<div class='art columns small-12 medium-4' data-grid-id="7">
 
 					<div class='wrapper active'>
 						<img src='/assets/img/album_01.jpg'>
@@ -170,7 +170,7 @@
 
 				</div>
 
-				<div class='art columns small-12 medium-4' id="8">
+				<div class='art columns small-12 medium-4' data-grid-id="8">
 
 					<div class='wrapper active'>
 						<img src='/assets/img/album_01.jpg'>
@@ -188,7 +188,7 @@
 
 				</div>
 
-				<div class='art columns small-12 medium-4' id="9">
+				<div class='art columns small-12 medium-4' data-grid-id="9">
 
 					<div class='wrapper active'>
 						<img src='/assets/img/album_01.jpg'>
