--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<p>@artistname</p>
 					</div>
 
-					<img class='text' src='/assets/img/text_01.png'>
+
 
 				</div>
 				<div class='art columns small-12 medium-4' data-grid-id="2">
@@ -73,8 +73,6 @@
 						<p>@artistname</p>
 					</div>
 
-					<img class='text' src='/assets/img/text_01.png'>
-
 				</div>
 				<div class='art columns small-12 medium-4' data-grid-id="3">
 
@@ -89,8 +87,6 @@
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
-
-					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 			</div>
@@ -110,8 +106,6 @@
 						<p>@artistname</p>
 					</div>
 
-					<img class='text' src='/assets/img/text_01.png'>
-
 				</div>
 
 				<div class='art columns small-12 medium-4' data-grid-id="5">
@@ -128,8 +122,6 @@
 						<p>@artistname</p>
 					</div>
 
-					<img class='text' src='/assets/img/text_01.png'>
-
 				</div>
 
 				<div class='art columns small-12 medium-4' data-grid-id="6">
@@ -145,8 +137,6 @@
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
-
-					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 			</div>
@@ -166,8 +156,6 @@
 						<p>@artistname</p>
 					</div>
 
-					<img class='text' src='/assets/img/text_01.png'>
-
 				</div>
 
 				<div class='art columns small-12 medium-4' data-grid-id="8">
@@ -183,8 +171,6 @@
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
-
-					<img class='text' src='/assets/img/text_01.png'>
 
 				</div>
 
@@ -202,8 +188,6 @@
 						<p>@artistname</p>
 					</div>
 
-					<img class='text' src='/assets/img/text_01.png'>
-
 				</div>
 
 			</div>
@@ -211,10 +195,11 @@
 		</section>
 
 		<!-- JavaScript -->
-			<script src="../../../../assets/js/vendor/modernizr.js"></script>
-			<script src="../../../../assets/js/vendor/jquery.min.js"></script>
-			<script src="../../../../assets/js/foundation.min.js"></script>
-			<script src="../../../../assets/js/app.js"></script>
+            <script src="/assets/js/loops.js"></script>
+			<script src="/assets/js/vendor/modernizr.js"></script>
+			<script src="/assets/js/vendor/jquery.min.js"></script>
+			<script src="/assets/js/foundation.min.js"></script>
+			<script src="/assets/js/app.js"></script>
 
 	</body>
 
