basic album display

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		</section>
 
-		<section class='grdata-grid-id'>
+		<section class='grid'>
 
 			<div class='row collapse'>
 				<div class='art columns small-12 medium-4 active' data-grid-id="1">
