music and ddr text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<section class='grid'>
 
 			<div class='row collapse'>
-				<div class='art columns small-12 medium-4 active' data-grid-id="1">
+				<div class='art columns small-12 medium-4' data-grid-id="1">
 
 					<div class='wrapper active'>
 						<img src='/assets/img/album_01.jpg'>
@@ -195,6 +195,7 @@
 		</section>
 
 		<!-- JavaScript -->
+            <script src="/assets/js/AudioContextMonkeyPatch.js"></script>
             <script src="/assets/js/loops.js"></script>
 			<script src="/assets/js/vendor/modernizr.js"></script>
 			<script src="/assets/js/vendor/jquery.min.js"></script>
