Update for fluid width

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- CSS Imports -->
 			<link rel="stylesheet" href="assets/css/app.css" media='all' />
 			<link rel="stylesheet" href="assets/css/font-awesome.css" media='all' />
-			<link rel="stylesheet" href="assets/css/print.css" media='print' />
+			<!-- <link rel="stylesheet" href="assets/css/print.css" media='print' /> -->
 
 		<!-- Google Fonts -->
 			<link href='http://fonts.googleapis.com/css?family=Raleway:400,100,300,200' rel='stylesheet' type='text/css'>
@@ -35,7 +35,7 @@
 
 		<section class='menu'>
 
-			<img class='logo-loopnine' src='/assets/img/logo_loopnine.svg'>
+			<img class='logo-loopnine' src='assets/img/logo_loopnine.svg'>
 
 		</section>
 
@@ -45,13 +45,13 @@
 				<div class='art columns small-12 medium-4' data-grid-id="1">
 
 					<div class='wrapper active'>
-						<img src='/assets/img/album_01.jpg'>
+						<img src='assets/img/album_01.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
 
 					<div class='wrapper'>
-						<img src='/assets/img/album_02.jpg'>
+						<img src='assets/img/album_02.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
@@ -62,13 +62,13 @@
 				<div class='art columns small-12 medium-4' data-grid-id="2">
 
 					<div class='wrapper active'>
-						<img src='/assets/img/album_01.jpg'>
+						<img src='assets/img/album_01.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
 
 					<div class='wrapper'>
-						<img src='/assets/img/album_02.jpg'>
+						<img src='assets/img/album_02.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
@@ -77,13 +77,13 @@
 				<div class='art columns small-12 medium-4' data-grid-id="3">
 
 					<div class='wrapper active'>
-						<img src='/assets/img/album_01.jpg'>
+						<img src='assets/img/album_01.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
 
 					<div class='wrapper'>
-						<img src='/assets/img/album_02.jpg'>
+						<img src='assets/img/album_02.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
@@ -95,13 +95,13 @@
 				<div class='art columns small-12 medium-4' data-grid-id="4">
 
 					<div class='wrapper active'>
-						<img src='/assets/img/album_01.jpg'>
+						<img src='assets/img/album_01.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
 
 					<div class='wrapper'>
-						<img src='/assets/img/album_02.jpg'>
+						<img src='assets/img/album_02.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
@@ -111,13 +111,13 @@
 				<div class='art columns small-12 medium-4' data-grid-id="5">
 
 					<div class='wrapper active'>
-						<img src='/assets/img/album_01.jpg'>
+						<img src='assets/img/album_01.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
 
 					<div class='wrapper'>
-						<img src='/assets/img/album_02.jpg'>
+						<img src='assets/img/album_02.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
@@ -127,13 +127,13 @@
 				<div class='art columns small-12 medium-4' data-grid-id="6">
 
 					<div class='wrapper active'>
-						<img src='/assets/img/album_01.jpg'>
+						<img src='assets/img/album_01.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
 
 					<div class='wrapper'>
-						<img src='/assets/img/album_02.jpg'>
+						<img src='assets/img/album_02.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
@@ -145,13 +145,13 @@
 				<div class='art columns small-12 medium-4' data-grid-id="7">
 
 					<div class='wrapper active'>
-						<img src='/assets/img/album_01.jpg'>
+						<img src='assets/img/album_01.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
 
 					<div class='wrapper'>
-						<img src='/assets/img/album_02.jpg'>
+						<img src='assets/img/album_02.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
@@ -161,13 +161,13 @@
 				<div class='art columns small-12 medium-4' data-grid-id="8">
 
 					<div class='wrapper active'>
-						<img src='/assets/img/album_01.jpg'>
+						<img src='assets/img/album_01.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
 
 					<div class='wrapper'>
-						<img src='/assets/img/album_02.jpg'>
+						<img src='assets/img/album_02.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
@@ -177,13 +177,13 @@
 				<div class='art columns small-12 medium-4' data-grid-id="9">
 
 					<div class='wrapper active'>
-						<img src='/assets/img/album_01.jpg'>
+						<img src='assets/img/album_01.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
 
 					<div class='wrapper'>
-						<img src='/assets/img/album_02.jpg'>
+						<img src='assets/img/album_02.jpg'>
 						<div class='overlay'></div>
 						<p>@artistname</p>
 					</div>
@@ -195,12 +195,12 @@
 		</section>
 
 		<!-- JavaScript -->
-            <script src="/assets/js/AudioContextMonkeyPatch.js"></script>
-            <script src="/assets/js/loops.js"></script>
-			<script src="/assets/js/vendor/modernizr.js"></script>
-			<script src="/assets/js/vendor/jquery.min.js"></script>
-			<script src="/assets/js/foundation.min.js"></script>
-			<script src="/assets/js/app.js"></script>
+            <script src="assets/js/AudioContextMonkeyPatch.js"></script>
+            <script src="assets/js/loops.js"></script>
+			<script src="assets/js/vendor/modernizr.js"></script>
+			<script src="assets/js/vendor/jquery.min.js"></script>
+			<script src="assets/js/foundation.min.js"></script>
+			<script src="assets/js/app.js"></script>
 
 	</body>
 
