--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	</head>
 
-	<body class='nocturne' oncontextmenu="return false;">
+	<body class='nocturne'>
 
 		<section class='menu'>
 
@@ -42,24 +42,8 @@
 		<section class='grid'>
 
 			<div class='row collapse'>
-				<div class='art columns small-12 medium-4' data-grid-id="1">
 
-					<div class='wrapper active'>
-						<img src='assets/img/album_01.jpg'>
-						<div class='overlay'></div>
-						<p>@artistname</p>
-					</div>
-
-					<div class='wrapper'>
-						<img src='assets/img/album_02.jpg'>
-						<div class='overlay'></div>
-						<p>@artistname</p>
-					</div>
-
-
-
-				</div>
-				<div class='art columns small-12 medium-4' data-grid-id="2">
+				<div class='art columns small-12 medium-4 square' data-grid-id="1">
 
 					<div class='wrapper active'>
 						<img src='assets/img/album_01.jpg'>
@@ -74,7 +58,23 @@
 					</div>
 
 				</div>
-				<div class='art columns small-12 medium-4' data-grid-id="3">
+
+				<div class='art columns small-12 medium-4 square' data-grid-id="2">
+
+					<div class='wrapper active'>
+						<img src='assets/img/album_01.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+					<div class='wrapper'>
+						<img src='assets/img/album_02.jpg'>
+						<div class='overlay'></div>
+						<p>@artistname</p>
+					</div>
+
+				</div>
+				<div class='art columns small-12 medium-4 square' data-grid-id="3">
 
 					<div class='wrapper active'>
 						<img src='assets/img/album_01.jpg'>
@@ -92,7 +92,7 @@
 			</div>
 			<div class='row collapse'>
 
-				<div class='art columns small-12 medium-4' data-grid-id="4">
+				<div class='art columns small-12 medium-4 square' data-grid-id="4">
 
 					<div class='wrapper active'>
 						<img src='assets/img/album_01.jpg'>
@@ -108,7 +108,7 @@
 
 				</div>
 
-				<div class='art columns small-12 medium-4' data-grid-id="5">
+				<div class='art columns small-12 medium-4 square' data-grid-id="5">
 
 					<div class='wrapper active'>
 						<img src='assets/img/album_01.jpg'>
@@ -124,7 +124,7 @@
 
 				</div>
 
-				<div class='art columns small-12 medium-4' data-grid-id="6">
+				<div class='art columns small-12 medium-4 square' data-grid-id="6">
 
 					<div class='wrapper active'>
 						<img src='assets/img/album_01.jpg'>
@@ -142,7 +142,7 @@
 			</div>
 
 			<div class='row collapse'>
-				<div class='art columns small-12 medium-4' data-grid-id="7">
+				<div class='art columns small-12 medium-4 square' data-grid-id="7">
 
 					<div class='wrapper active'>
 						<img src='assets/img/album_01.jpg'>
@@ -158,7 +158,7 @@
 
 				</div>
 
-				<div class='art columns small-12 medium-4' data-grid-id="8">
+				<div class='art columns small-12 medium-4 square' data-grid-id="8">
 
 					<div class='wrapper active'>
 						<img src='assets/img/album_01.jpg'>
@@ -174,7 +174,7 @@
 
 				</div>
 
-				<div class='art columns small-12 medium-4' data-grid-id="9">
+				<div class='art columns small-12 medium-4 square' data-grid-id="9">
 
 					<div class='wrapper active'>
 						<img src='assets/img/album_01.jpg'>
