--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 
 	<body class='nocturne'>
 
+		<ul class='loader'>
+
+			<li>&nbsp;</li>
+			<li>&nbsp;</li>
+			<li>&nbsp;</li>
+			<li>&nbsp;</li>
+			<li>&nbsp;</li>
+
+		</ul>
+
 		<section class='menu'>
 
 			<img class='logo-loopnine' src='assets/img/logo_loopnine.svg'>
