--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 	<body class='nocturne'>
 
+        <div class="shade" style="z-index: 90; position: absolute; height: 100%; width: 100%; background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.6);"></div>
 		<ul class='loader'>
 
 			<li>&nbsp;</li>
