--- a/index.html
+++ b/index.html
@@ -33,15 +33,19 @@
 
 	<body class='nocturne'>
 
-		<ul class='loader'>
+		<div class='wrapper'>
 
-			<li>&nbsp;</li>
-			<li>&nbsp;</li>
-			<li>&nbsp;</li>
-			<li>&nbsp;</li>
-			<li>&nbsp;</li>
+			<ul class='loader'>
 
-		</ul>
+				<li>&nbsp;</li>
+				<li>&nbsp;</li>
+				<li>&nbsp;</li>
+				<li>&nbsp;</li>
+				<li>&nbsp;</li>
+
+			</ul>
+
+		</div>
 
 		<section class='menu'>
 
